CST-405-minimal/parser.output
Terminals which are not used

   SEMICOLON


State 85 conflicts: 14 shift/reduce
State 86 conflicts: 1 shift/reduce
State 139 conflicts: 14 shift/reduce


Grammar

    0 $accept: program $end

    1 program: top_level_list

    2 top_level_list: top_level_item
    3               | top_level_list top_level_item

    4 top_level_item: global_decl
    5               | function_decl

    6 global_decl: INT ID ';'
    7            | DOUBLE ID ';'
    8            | INT ID '=' expr ';'
    9            | INT ID LBRACKET NUM RBRACKET ';'
   10            | INT ID LBRACKET NUM RBRACKET LBRACKET NUM RBRACKET ';'

   11 function_decl: INT ID LPAREN param_list RPAREN block
   12              | VOID ID LPAREN param_list RPAREN block
   13              | INT MAIN LPAREN RPAREN block
   14              | VOID MAIN LPAREN RPAREN block

   15 block: LBRACE stmt_list RBRACE
   16      | LBRACE RBRACE

   17 param_list: /* empty */
   18           | non_empty_param_list

   19 non_empty_param_list: param
   20                     | non_empty_param_list COMMA param

   21 param: INT ID
   22      | DOUBLE ID
   23      | INT ID LBRACKET RBRACKET
   24      | DOUBLE ID LBRACKET RBRACKET

   25 stmt_list: stmt
   26          | stmt_list stmt

   27 stmt: decl
   28     | assign
   29     | print_stmt
   30     | while_stmt
   31     | for_stmt
   32     | if_stmt
   33     | switch_stmt
   34     | block
   35     | BREAK ';'
   36     | RETURN expr ';'
   37     | RETURN ';'
   38     | ID LPAREN expr RPAREN ';'
   39     | ID LPAREN RPAREN ';'

   40 decl: INT ID ';'
   41     | DOUBLE ID ';'
   42     | INT ID '=' expr ';'
   43     | INT ID LBRACKET NUM RBRACKET ';'
   44     | INT ID LBRACKET NUM RBRACKET LBRACKET NUM RBRACKET ';'

   45 assign: ID '=' expr ';'
   46       | ID LBRACKET expr RBRACKET '=' expr ';'
   47       | ID LBRACKET expr RBRACKET LBRACKET expr RBRACKET '=' expr ';'

   48 expr: NUM
   49     | FLOAT_NUM
   50     | ID
   51     | expr '+' expr
   52     | expr '-' expr
   53     | expr '*' expr
   54     | expr '/' expr
   55     | expr '%' expr
   56     | expr '<' expr
   57     | expr '>' expr
   58     | expr EQ expr
   59     | expr LE expr
   60     | expr GE expr
   61     | expr NEQ expr
   62     | expr AND expr
   63     | expr OR expr
   64     | NOT expr
   65     | '-' expr
   66     | LPAREN expr RPAREN
   67     | ID LBRACKET expr RBRACKET
   68     | ID LBRACKET expr RBRACKET LBRACKET expr RBRACKET
   69     | ID LPAREN expr RPAREN
   70     | ID LPAREN RPAREN
   71     | expr IS value_list

   72 value_list: expr
   73           | value_list COMMA expr

   74 print_stmt: PRINT LPAREN expr RPAREN ';'

   75 while_stmt: WHILE LPAREN expr RPAREN stmt

   76 for_stmt: FOR LPAREN ID '=' expr ';' expr ';' ID '=' expr RPAREN stmt

   77 if_stmt: IF LPAREN expr RPAREN stmt
   78        | IF LPAREN expr RPAREN stmt ELSE stmt

   79 switch_stmt: SWITCH LPAREN expr RPAREN LBRACE case_list RBRACE

   80 case_list: case_stmt
   81          | case_stmt case_list

   82 case_stmt: CASE NUM COLON stmt_list
   83          | CASE NUM COLON
   84          | DEFAULT COLON stmt_list
   85          | DEFAULT COLON


Terminals, with rules where they appear

$end (0) 0
'%' (37) 55
'*' (42) 53
'+' (43) 51
'-' (45) 52 65
'/' (47) 54
';' (59) 6 7 8 9 10 35 36 37 38 39 40 41 42 43 44 45 46 47 74 76
'<' (60) 56
'=' (61) 8 42 45 46 47 76
'>' (62) 57
error (256)
NUM (258) 9 10 43 44 48 82 83
FLOAT_NUM (259) 49
ID (260) 6 7 8 9 10 11 12 21 22 23 24 38 39 40 41 42 43 44 45 46 47
    50 67 68 69 70 76
INT (261) 6 8 9 10 11 13 21 23 40 42 43 44
DOUBLE (262) 7 22 24 41
PRINT (263) 74
WHILE (264) 75
FOR (265) 76
IF (266) 77 78
ELSE (267) 78
VOID (268) 12 14
RETURN (269) 36 37
MAIN (270) 13 14
LBRACE (271) 15 16 79
RBRACE (272) 15 16 79
LPAREN (273) 11 12 13 14 38 39 66 69 70 74 75 76 77 78 79
RPAREN (274) 11 12 13 14 38 39 66 69 70 74 75 76 77 78 79
LBRACKET (275) 9 10 23 24 43 44 46 47 67 68
RBRACKET (276) 9 10 23 24 43 44 46 47 67 68
COMMA (277) 20 73
SEMICOLON (278)
AND (279) 62
OR (280) 63
NOT (281) 64
EQ (282) 58
LE (283) 59
GE (284) 60
NEQ (285) 61
IS (286) 71
SWITCH (287) 79
CASE (288) 82 83
DEFAULT (289) 84 85
BREAK (290) 35
COLON (291) 82 83 84 85
LOWER_THAN_ELSE (292)
UMINUS (293)


Nonterminals, with rules where they appear

$accept (48)
    on left: 0
program (49)
    on left: 1, on right: 0
top_level_list (50)
    on left: 2 3, on right: 1 3
top_level_item (51)
    on left: 4 5, on right: 2 3
global_decl (52)
    on left: 6 7 8 9 10, on right: 4
function_decl (53)
    on left: 11 12 13 14, on right: 5
block (54)
    on left: 15 16, on right: 11 12 13 14 34
param_list (55)
    on left: 17 18, on right: 11 12
non_empty_param_list (56)
    on left: 19 20, on right: 18 20
param (57)
    on left: 21 22 23 24, on right: 19 20
stmt_list (58)
    on left: 25 26, on right: 15 26 82 84
stmt (59)
    on left: 27 28 29 30 31 32 33 34 35 36 37 38 39,
    on right: 25 26 75 76 77 78
decl (60)
    on left: 40 41 42 43 44, on right: 27
assign (61)
    on left: 45 46 47, on right: 28
expr (62)
    on left: 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65
    66 67 68 69 70 71, on right: 8 36 38 42 45 46 47 51 52 53 54 55
    56 57 58 59 60 61 62 63 64 65 66 67 68 69 71 72 73 74 75 76 77
    78 79
value_list (63)
    on left: 72 73, on right: 71 73
print_stmt (64)
    on left: 74, on right: 29
while_stmt (65)
    on left: 75, on right: 30
for_stmt (66)
    on left: 76, on right: 31
if_stmt (67)
    on left: 77 78, on right: 32
switch_stmt (68)
    on left: 79, on right: 33
case_list (69)
    on left: 80 81, on right: 79 81
case_stmt (70)
    on left: 82 83 84 85, on right: 80 81


state 0

    0 $accept: . program $end
    1 program: . top_level_list
    2 top_level_list: . top_level_item
    3               | . top_level_list top_level_item
    4 top_level_item: . global_decl
    5               | . function_decl
    6 global_decl: . INT ID ';'
    7            | . DOUBLE ID ';'
    8            | . INT ID '=' expr ';'
    9            | . INT ID LBRACKET NUM RBRACKET ';'
   10            | . INT ID LBRACKET NUM RBRACKET LBRACKET NUM RBRACKET ';'
   11 function_decl: . INT ID LPAREN param_list RPAREN block
   12              | . VOID ID LPAREN param_list RPAREN block
   13              | . INT MAIN LPAREN RPAREN block
   14              | . VOID MAIN LPAREN RPAREN block

    INT     shift, and go to state 1
    DOUBLE  shift, and go to state 2
    VOID    shift, and go to state 3

    program         go to state 4
    top_level_list  go to state 5
    top_level_item  go to state 6
    global_decl     go to state 7
    function_decl   go to state 8


state 1

    6 global_decl: INT . ID ';'
    8            | INT . ID '=' expr ';'
    9            | INT . ID LBRACKET NUM RBRACKET ';'
   10            | INT . ID LBRACKET NUM RBRACKET LBRACKET NUM RBRACKET ';'
   11 function_decl: INT . ID LPAREN param_list RPAREN block
   13              | INT . MAIN LPAREN RPAREN block

    ID    shift, and go to state 9
    MAIN  shift, and go to state 10


state 2

    7 global_decl: DOUBLE . ID ';'

    ID  shift, and go to state 11


state 3

   12 function_decl: VOID . ID LPAREN param_list RPAREN block
   14              | VOID . MAIN LPAREN RPAREN block

    ID    shift, and go to state 12
    MAIN  shift, and go to state 13


state 4

    0 $accept: program . $end

    $end  shift, and go to state 14


state 5

    1 program: top_level_list .  [$end]
    3 top_level_list: top_level_list . top_level_item
    4 top_level_item: . global_decl
    5               | . function_decl
    6 global_decl: . INT ID ';'
    7            | . DOUBLE ID ';'
    8            | . INT ID '=' expr ';'
    9            | . INT ID LBRACKET NUM RBRACKET ';'
   10            | . INT ID LBRACKET NUM RBRACKET LBRACKET NUM RBRACKET ';'
   11 function_decl: . INT ID LPAREN param_list RPAREN block
   12              | . VOID ID LPAREN param_list RPAREN block
   13              | . INT MAIN LPAREN RPAREN block
   14              | . VOID MAIN LPAREN RPAREN block

    INT     shift, and go to state 1
    DOUBLE  shift, and go to state 2
    VOID    shift, and go to state 3

    $default  reduce using rule 1 (program)

    top_level_item  go to state 15
    global_decl     go to state 7
    function_decl   go to state 8


state 6

    2 top_level_list: top_level_item .

    $default  reduce using rule 2 (top_level_list)


state 7

    4 top_level_item: global_decl .

    $default  reduce using rule 4 (top_level_item)


state 8

    5 top_level_item: function_decl .

    $default  reduce using rule 5 (top_level_item)


state 9

    6 global_decl: INT ID . ';'
    8            | INT ID . '=' expr ';'
    9            | INT ID . LBRACKET NUM RBRACKET ';'
   10            | INT ID . LBRACKET NUM RBRACKET LBRACKET NUM RBRACKET ';'
   11 function_decl: INT ID . LPAREN param_list RPAREN block

    LPAREN    shift, and go to state 16
    LBRACKET  shift, and go to state 17
    ';'       shift, and go to state 18
    '='       shift, and go to state 19


state 10

   13 function_decl: INT MAIN . LPAREN RPAREN block

    LPAREN  shift, and go to state 20


state 11

    7 global_decl: DOUBLE ID . ';'

    ';'  shift, and go to state 21


state 12

   12 function_decl: VOID ID . LPAREN param_list RPAREN block

    LPAREN  shift, and go to state 22


state 13

   14 function_decl: VOID MAIN . LPAREN RPAREN block

    LPAREN  shift, and go to state 23


state 14

    0 $accept: program $end .

    $default  accept


state 15

    3 top_level_list: top_level_list top_level_item .

    $default  reduce using rule 3 (top_level_list)


state 16

   11 function_decl: INT ID LPAREN . param_list RPAREN block
   17 param_list: .  [RPAREN]
   18           | . non_empty_param_list
   19 non_empty_param_list: . param
   20                     | . non_empty_param_list COMMA param
   21 param: . INT ID
   22      | . DOUBLE ID
   23      | . INT ID LBRACKET RBRACKET
   24      | . DOUBLE ID LBRACKET RBRACKET

    INT     shift, and go to state 24
    DOUBLE  shift, and go to state 25

    $default  reduce using rule 17 (param_list)

    param_list            go to state 26
    non_empty_param_list  go to state 27
    param                 go to state 28


state 17

    9 global_decl: INT ID LBRACKET . NUM RBRACKET ';'
   10            | INT ID LBRACKET . NUM RBRACKET LBRACKET NUM RBRACKET ';'

    NUM  shift, and go to state 29


state 18

    6 global_decl: INT ID ';' .

    $default  reduce using rule 6 (global_decl)


state 19

    8 global_decl: INT ID '=' . expr ';'
   48 expr: . NUM
   49     | . FLOAT_NUM
   50     | . ID
   51     | . expr '+' expr
   52     | . expr '-' expr
   53     | . expr '*' expr
   54     | . expr '/' expr
   55     | . expr '%' expr
   56     | . expr '<' expr
   57     | . expr '>' expr
   58     | . expr EQ expr
   59     | . expr LE expr
   60     | . expr GE expr
   61     | . expr NEQ expr
   62     | . expr AND expr
   63     | . expr OR expr
   64     | . NOT expr
   65     | . '-' expr
   66     | . LPAREN expr RPAREN
   67     | . ID LBRACKET expr RBRACKET
   68     | . ID LBRACKET expr RBRACKET LBRACKET expr RBRACKET
   69     | . ID LPAREN expr RPAREN
   70     | . ID LPAREN RPAREN
   71     | . expr IS value_list

    NUM        shift, and go to state 30
    FLOAT_NUM  shift, and go to state 31
    ID         shift, and go to state 32
    LPAREN     shift, and go to state 33
    NOT        shift, and go to state 34
    '-'        shift, and go to state 35

    expr  go to state 36


state 20

   13 function_decl: INT MAIN LPAREN . RPAREN block

    RPAREN  shift, and go to state 37


state 21

    7 global_decl: DOUBLE ID ';' .

    $default  reduce using rule 7 (global_decl)


state 22

   12 function_decl: VOID ID LPAREN . param_list RPAREN block
   17 param_list: .  [RPAREN]
   18           | . non_empty_param_list
   19 non_empty_param_list: . param
   20                     | . non_empty_param_list COMMA param
   21 param: . INT ID
   22      | . DOUBLE ID
   23      | . INT ID LBRACKET RBRACKET
   24      | . DOUBLE ID LBRACKET RBRACKET

    INT     shift, and go to state 24
    DOUBLE  shift, and go to state 25

    $default  reduce using rule 17 (param_list)

    param_list            go to state 38
    non_empty_param_list  go to state 27
    param                 go to state 28


state 23

   14 function_decl: VOID MAIN LPAREN . RPAREN block

    RPAREN  shift, and go to state 39


state 24

   21 param: INT . ID
   23      | INT . ID LBRACKET RBRACKET

    ID  shift, and go to state 40


state 25

   22 param: DOUBLE . ID
   24      | DOUBLE . ID LBRACKET RBRACKET

    ID  shift, and go to state 41


state 26

   11 function_decl: INT ID LPAREN param_list . RPAREN block

    RPAREN  shift, and go to state 42


state 27

   18 param_list: non_empty_param_list .  [RPAREN]
   20 non_empty_param_list: non_empty_param_list . COMMA param

    COMMA  shift, and go to state 43

    $default  reduce using rule 18 (param_list)


state 28

   19 non_empty_param_list: param .

    $default  reduce using rule 19 (non_empty_param_list)


state 29

    9 global_decl: INT ID LBRACKET NUM . RBRACKET ';'
   10            | INT ID LBRACKET NUM . RBRACKET LBRACKET NUM RBRACKET ';'

    RBRACKET  shift, and go to state 44


state 30

   48 expr: NUM .

    $default  reduce using rule 48 (expr)


state 31

   49 expr: FLOAT_NUM .

    $default  reduce using rule 49 (expr)


state 32

   50 expr: ID .  [RPAREN, RBRACKET, COMMA, AND, OR, EQ, LE, GE, NEQ, IS, '<', '>', '+', '-', '*', '/', '%', ';']
   67     | ID . LBRACKET expr RBRACKET
   68     | ID . LBRACKET expr RBRACKET LBRACKET expr RBRACKET
   69     | ID . LPAREN expr RPAREN
   70     | ID . LPAREN RPAREN

    LPAREN    shift, and go to state 45
    LBRACKET  shift, and go to state 46

    $default  reduce using rule 50 (expr)


state 33

   48 expr: . NUM
   49     | . FLOAT_NUM
   50     | . ID
   51     | . expr '+' expr
   52     | . expr '-' expr
   53     | . expr '*' expr
   54     | . expr '/' expr
   55     | . expr '%' expr
   56     | . expr '<' expr
   57     | . expr '>' expr
   58     | . expr EQ expr
   59     | . expr LE expr
   60     | . expr GE expr
   61     | . expr NEQ expr
   62     | . expr AND expr
   63     | . expr OR expr
   64     | . NOT expr
   65     | . '-' expr
   66     | . LPAREN expr RPAREN
   66     | LPAREN . expr RPAREN
   67     | . ID LBRACKET expr RBRACKET
   68     | . ID LBRACKET expr RBRACKET LBRACKET expr RBRACKET
   69     | . ID LPAREN expr RPAREN
   70     | . ID LPAREN RPAREN
   71     | . expr IS value_list

    NUM        shift, and go to state 30
    FLOAT_NUM  shift, and go to state 31
    ID         shift, and go to state 32
    LPAREN     shift, and go to state 33
    NOT        shift, and go to state 34
    '-'        shift, and go to state 35

    expr  go to state 47


state 34

   48 expr: . NUM
   49     | . FLOAT_NUM
   50     | . ID
   51     | . expr '+' expr
   52     | . expr '-' expr
   53     | . expr '*' expr
   54     | . expr '/' expr
   55     | . expr '%' expr
   56     | . expr '<' expr
   57     | . expr '>' expr
   58     | . expr EQ expr
   59     | . expr LE expr
   60     | . expr GE expr
   61     | . expr NEQ expr
   62     | . expr AND expr
   63     | . expr OR expr
   64     | . NOT expr
   64     | NOT . expr
   65     | . '-' expr
   66     | . LPAREN expr RPAREN
   67     | . ID LBRACKET expr RBRACKET
   68     | . ID LBRACKET expr RBRACKET LBRACKET expr RBRACKET
   69     | . ID LPAREN expr RPAREN
   70     | . ID LPAREN RPAREN
   71     | . expr IS value_list

    NUM        shift, and go to state 30
    FLOAT_NUM  shift, and go to state 31
    ID         shift, and go to state 32
    LPAREN     shift, and go to state 33
    NOT        shift, and go to state 34
    '-'        shift, and go to state 35

    expr  go to state 48


state 35

   48 expr: . NUM
   49     | . FLOAT_NUM
   50     | . ID
   51     | . expr '+' expr
   52     | . expr '-' expr
   53     | . expr '*' expr
   54     | . expr '/' expr
   55     | . expr '%' expr
   56     | . expr '<' expr
   57     | . expr '>' expr
   58     | . expr EQ expr
   59     | . expr LE expr
   60     | . expr GE expr
   61     | . expr NEQ expr
   62     | . expr AND expr
   63     | . expr OR expr
   64     | . NOT expr
   65     | . '-' expr
   65     | '-' . expr
   66     | . LPAREN expr RPAREN
   67     | . ID LBRACKET expr RBRACKET
   68     | . ID LBRACKET expr RBRACKET LBRACKET expr RBRACKET
   69     | . ID LPAREN expr RPAREN
   70     | . ID LPAREN RPAREN
   71     | . expr IS value_list

    NUM        shift, and go to state 30
    FLOAT_NUM  shift, and go to state 31
    ID         shift, and go to state 32
    LPAREN     shift, and go to state 33
    NOT        shift, and go to state 34
    '-'        shift, and go to state 35

    expr  go to state 49


state 36

    8 global_decl: INT ID '=' expr . ';'
   51 expr: expr . '+' expr
   52     | expr . '-' expr
   53     | expr . '*' expr
   54     | expr . '/' expr
   55     | expr . '%' expr
   56     | expr . '<' expr
   57     | expr . '>' expr
   58     | expr . EQ expr
   59     | expr . LE expr
   60     | expr . GE expr
   61     | expr . NEQ expr
   62     | expr . AND expr
   63     | expr . OR expr
   71     | expr . IS value_list

    AND  shift, and go to state 50
    OR   shift, and go to state 51
    EQ   shift, and go to state 52
    LE   shift, and go to state 53
    GE   shift, and go to state 54
    NEQ  shift, and go to state 55
    IS   shift, and go to state 56
    '<'  shift, and go to state 57
    '>'  shift, and go to state 58
    '+'  shift, and go to state 59
    '-'  shift, and go to state 60
    '*'  shift, and go to state 61
    '/'  shift, and go to state 62
    '%'  shift, and go to state 63
    ';'  shift, and go to state 64


state 37

   13 function_decl: INT MAIN LPAREN RPAREN . block
   15 block: . LBRACE stmt_list RBRACE
   16      | . LBRACE RBRACE

    LBRACE  shift, and go to state 65

    block  go to state 66


state 38

   12 function_decl: VOID ID LPAREN param_list . RPAREN block

    RPAREN  shift, and go to state 67


state 39

   14 function_decl: VOID MAIN LPAREN RPAREN . block
   15 block: . LBRACE stmt_list RBRACE
   16      | . LBRACE RBRACE

    LBRACE  shift, and go to state 65

    block  go to state 68


state 40

   21 param: INT ID .  [RPAREN, COMMA]
   23      | INT ID . LBRACKET RBRACKET

    LBRACKET  shift, and go to state 69

    $default  reduce using rule 21 (param)


state 41

   22 param: DOUBLE ID .  [RPAREN, COMMA]
   24      | DOUBLE ID . LBRACKET RBRACKET

    LBRACKET  shift, and go to state 70

    $default  reduce using rule 22 (param)


state 42

   11 function_decl: INT ID LPAREN param_list RPAREN . block
   15 block: . LBRACE stmt_list RBRACE
   16      | . LBRACE RBRACE

    LBRACE  shift, and go to state 65

    block  go to state 71


state 43

   20 non_empty_param_list: non_empty_param_list COMMA . param
   21 param: . INT ID
   22      | . DOUBLE ID
   23      | . INT ID LBRACKET RBRACKET
   24      | . DOUBLE ID LBRACKET RBRACKET

    INT     shift, and go to state 24
    DOUBLE  shift, and go to state 25

    param  go to state 72


state 44

    9 global_decl: INT ID LBRACKET NUM RBRACKET . ';'
   10            | INT ID LBRACKET NUM RBRACKET . LBRACKET NUM RBRACKET ';'

    LBRACKET  shift, and go to state 73
    ';'       shift, and go to state 74


state 45

   48 expr: . NUM
   49     | . FLOAT_NUM
   50     | . ID
   51     | . expr '+' expr
   52     | . expr '-' expr
   53     | . expr '*' expr
   54     | . expr '/' expr
   55     | . expr '%' expr
   56     | . expr '<' expr
   57     | . expr '>' expr
   58     | . expr EQ expr
   59     | . expr LE expr
   60     | . expr GE expr
   61     | . expr NEQ expr
   62     | . expr AND expr
   63     | . expr OR expr
   64     | . NOT expr
   65     | . '-' expr
   66     | . LPAREN expr RPAREN
   67     | . ID LBRACKET expr RBRACKET
   68     | . ID LBRACKET expr RBRACKET LBRACKET expr RBRACKET
   69     | . ID LPAREN expr RPAREN
   69     | ID LPAREN . expr RPAREN
   70     | . ID LPAREN RPAREN
   70     | ID LPAREN . RPAREN
   71     | . expr IS value_list

    NUM        shift, and go to state 30
    FLOAT_NUM  shift, and go to state 31
    ID         shift, and go to state 32
    LPAREN     shift, and go to state 33
    RPAREN     shift, and go to state 75
    NOT        shift, and go to state 34
    '-'        shift, and go to state 35

    expr  go to state 76


state 46

   48 expr: . NUM
   49     | . FLOAT_NUM
   50     | . ID
   51     | . expr '+' expr
   52     | . expr '-' expr
   53     | . expr '*' expr
   54     | . expr '/' expr
   55     | . expr '%' expr
   56     | . expr '<' expr
   57     | . expr '>' expr
   58     | . expr EQ expr
   59     | . expr LE expr
   60     | . expr GE expr
   61     | . expr NEQ expr
   62     | . expr AND expr
   63     | . expr OR expr
   64     | . NOT expr
   65     | . '-' expr
   66     | . LPAREN expr RPAREN
   67     | . ID LBRACKET expr RBRACKET
   67     | ID LBRACKET . expr RBRACKET
   68     | . ID LBRACKET expr RBRACKET LBRACKET expr RBRACKET
   68     | ID LBRACKET . expr RBRACKET LBRACKET expr RBRACKET
   69     | . ID LPAREN expr RPAREN
   70     | . ID LPAREN RPAREN
   71     | . expr IS value_list

    NUM        shift, and go to state 30
    FLOAT_NUM  shift, and go to state 31
    ID         shift, and go to state 32
    LPAREN     shift, and go to state 33
    NOT        shift, and go to state 34
    '-'        shift, and go to state 35

    expr  go to state 77


state 47

   51 expr: expr . '+' expr
   52     | expr . '-' expr
   53     | expr . '*' expr
   54     | expr . '/' expr
   55     | expr . '%' expr
   56     | expr . '<' expr
   57     | expr . '>' expr
   58     | expr . EQ expr
   59     | expr . LE expr
   60     | expr . GE expr
   61     | expr . NEQ expr
   62     | expr . AND expr
   63     | expr . OR expr
   66     | LPAREN expr . RPAREN
   71     | expr . IS value_list

    RPAREN  shift, and go to state 78
    AND     shift, and go to state 50
    OR      shift, and go to state 51
    EQ      shift, and go to state 52
    LE      shift, and go to state 53
    GE      shift, and go to state 54
    NEQ     shift, and go to state 55
    IS      shift, and go to state 56
    '<'     shift, and go to state 57
    '>'     shift, and go to state 58
    '+'     shift, and go to state 59
    '-'     shift, and go to state 60
    '*'     shift, and go to state 61
    '/'     shift, and go to state 62
    '%'     shift, and go to state 63


state 48

   51 expr: expr . '+' expr
   52     | expr . '-' expr
   53     | expr . '*' expr
   54     | expr . '/' expr
   55     | expr . '%' expr
   56     | expr . '<' expr
   57     | expr . '>' expr
   58     | expr . EQ expr
   59     | expr . LE expr
   60     | expr . GE expr
   61     | expr . NEQ expr
   62     | expr . AND expr
   63     | expr . OR expr
   64     | NOT expr .  [RPAREN, RBRACKET, COMMA, AND, OR, EQ, LE, GE, NEQ, IS, '<', '>', '+', '-', '*', '/', '%', ';']
   71     | expr . IS value_list

    $default  reduce using rule 64 (expr)

    Conflict between rule 64 and token AND resolved as reduce (AND < NOT).
    Conflict between rule 64 and token OR resolved as reduce (OR < NOT).
    Conflict between rule 64 and token EQ resolved as reduce (EQ < NOT).
    Conflict between rule 64 and token LE resolved as reduce (LE < NOT).
    Conflict between rule 64 and token GE resolved as reduce (GE < NOT).
    Conflict between rule 64 and token NEQ resolved as reduce (NEQ < NOT).
    Conflict between rule 64 and token IS resolved as reduce (IS < NOT).
    Conflict between rule 64 and token '<' resolved as reduce ('<' < NOT).
    Conflict between rule 64 and token '>' resolved as reduce ('>' < NOT).
    Conflict between rule 64 and token '+' resolved as reduce ('+' < NOT).
    Conflict between rule 64 and token '-' resolved as reduce ('-' < NOT).
    Conflict between rule 64 and token '*' resolved as reduce ('*' < NOT).
    Conflict between rule 64 and token '/' resolved as reduce ('/' < NOT).
    Conflict between rule 64 and token '%' resolved as reduce ('%' < NOT).


state 49

   51 expr: expr . '+' expr
   52     | expr . '-' expr
   53     | expr . '*' expr
   54     | expr . '/' expr
   55     | expr . '%' expr
   56     | expr . '<' expr
   57     | expr . '>' expr
   58     | expr . EQ expr
   59     | expr . LE expr
   60     | expr . GE expr
   61     | expr . NEQ expr
   62     | expr . AND expr
   63     | expr . OR expr
   65     | '-' expr .  [RPAREN, RBRACKET, COMMA, AND, OR, EQ, LE, GE, NEQ, IS, '<', '>', '+', '-', '*', '/', '%', ';']
   71     | expr . IS value_list

    $default  reduce using rule 65 (expr)

    Conflict between rule 65 and token AND resolved as reduce (AND < UMINUS).
    Conflict between rule 65 and token OR resolved as reduce (OR < UMINUS).
    Conflict between rule 65 and token EQ resolved as reduce (EQ < UMINUS).
    Conflict between rule 65 and token LE resolved as reduce (LE < UMINUS).
    Conflict between rule 65 and token GE resolved as reduce (GE < UMINUS).
    Conflict between rule 65 and token NEQ resolved as reduce (NEQ < UMINUS).
    Conflict between rule 65 and token IS resolved as reduce (IS < UMINUS).
    Conflict between rule 65 and token '<' resolved as reduce ('<' < UMINUS).
    Conflict between rule 65 and token '>' resolved as reduce ('>' < UMINUS).
    Conflict between rule 65 and token '+' resolved as reduce ('+' < UMINUS).
    Conflict between rule 65 and token '-' resolved as reduce ('-' < UMINUS).
    Conflict between rule 65 and token '*' resolved as reduce ('*' < UMINUS).
    Conflict between rule 65 and token '/' resolved as reduce ('/' < UMINUS).
    Conflict between rule 65 and token '%' resolved as reduce ('%' < UMINUS).


state 50

   48 expr: . NUM
   49     | . FLOAT_NUM
   50     | . ID
   51     | . expr '+' expr
   52     | . expr '-' expr
   53     | . expr '*' expr
   54     | . expr '/' expr
   55     | . expr '%' expr
   56     | . expr '<' expr
   57     | . expr '>' expr
   58     | . expr EQ expr
   59     | . expr LE expr
   60     | . expr GE expr
   61     | . expr NEQ expr
   62     | . expr AND expr
   62     | expr AND . expr
   63     | . expr OR expr
   64     | . NOT expr
   65     | . '-' expr
   66     | . LPAREN expr RPAREN
   67     | . ID LBRACKET expr RBRACKET
   68     | . ID LBRACKET expr RBRACKET LBRACKET expr RBRACKET
   69     | . ID LPAREN expr RPAREN
   70     | . ID LPAREN RPAREN
   71     | . expr IS value_list

    NUM        shift, and go to state 30
    FLOAT_NUM  shift, and go to state 31
    ID         shift, and go to state 32
    LPAREN     shift, and go to state 33
    NOT        shift, and go to state 34
    '-'        shift, and go to state 35

    expr  go to state 79


state 51

   48 expr: . NUM
   49     | . FLOAT_NUM
   50     | . ID
   51     | . expr '+' expr
   52     | . expr '-' expr
   53     | . expr '*' expr
   54     | . expr '/' expr
   55     | . expr '%' expr
   56     | . expr '<' expr
   57     | . expr '>' expr
   58     | . expr EQ expr
   59     | . expr LE expr
   60     | . expr GE expr
   61     | . expr NEQ expr
   62     | . expr AND expr
   63     | . expr OR expr
   63     | expr OR . expr
   64     | . NOT expr
   65     | . '-' expr
   66     | . LPAREN expr RPAREN
   67     | . ID LBRACKET expr RBRACKET
   68     | . ID LBRACKET expr RBRACKET LBRACKET expr RBRACKET
   69     | . ID LPAREN expr RPAREN
   70     | . ID LPAREN RPAREN
   71     | . expr IS value_list

    NUM        shift, and go to state 30
    FLOAT_NUM  shift, and go to state 31
    ID         shift, and go to state 32
    LPAREN     shift, and go to state 33
    NOT        shift, and go to state 34
    '-'        shift, and go to state 35

    expr  go to state 80


state 52

   48 expr: . NUM
   49     | . FLOAT_NUM
   50     | . ID
   51     | . expr '+' expr
   52     | . expr '-' expr
   53     | . expr '*' expr
   54     | . expr '/' expr
   55     | . expr '%' expr
   56     | . expr '<' expr
   57     | . expr '>' expr
   58     | . expr EQ expr
   58     | expr EQ . expr
   59     | . expr LE expr
   60     | . expr GE expr
   61     | . expr NEQ expr
   62     | . expr AND expr
   63     | . expr OR expr
   64     | . NOT expr
   65     | . '-' expr
   66     | . LPAREN expr RPAREN
   67     | . ID LBRACKET expr RBRACKET
   68     | . ID LBRACKET expr RBRACKET LBRACKET expr RBRACKET
   69     | . ID LPAREN expr RPAREN
   70     | . ID LPAREN RPAREN
   71     | . expr IS value_list

    NUM        shift, and go to state 30
    FLOAT_NUM  shift, and go to state 31
    ID         shift, and go to state 32
    LPAREN     shift, and go to state 33
    NOT        shift, and go to state 34
    '-'        shift, and go to state 35

    expr  go to state 81


state 53

   48 expr: . NUM
   49     | . FLOAT_NUM
   50     | . ID
   51     | . expr '+' expr
   52     | . expr '-' expr
   53     | . expr '*' expr
   54     | . expr '/' expr
   55     | . expr '%' expr
   56     | . expr '<' expr
   57     | . expr '>' expr
   58     | . expr EQ expr
   59     | . expr LE expr
   59     | expr LE . expr
   60     | . expr GE expr
   61     | . expr NEQ expr
   62     | . expr AND expr
   63     | . expr OR expr
   64     | . NOT expr
   65     | . '-' expr
   66     | . LPAREN expr RPAREN
   67     | . ID LBRACKET expr RBRACKET
   68     | . ID LBRACKET expr RBRACKET LBRACKET expr RBRACKET
   69     | . ID LPAREN expr RPAREN
   70     | . ID LPAREN RPAREN
   71     | . expr IS value_list

    NUM        shift, and go to state 30
    FLOAT_NUM  shift, and go to state 31
    ID         shift, and go to state 32
    LPAREN     shift, and go to state 33
    NOT        shift, and go to state 34
    '-'        shift, and go to state 35

    expr  go to state 82


state 54

   48 expr: . NUM
   49     | . FLOAT_NUM
   50     | . ID
   51     | . expr '+' expr
   52     | . expr '-' expr
   53     | . expr '*' expr
   54     | . expr '/' expr
   55     | . expr '%' expr
   56     | . expr '<' expr
   57     | . expr '>' expr
   58     | . expr EQ expr
   59     | . expr LE expr
   60     | . expr GE expr
   60     | expr GE . expr
   61     | . expr NEQ expr
   62     | . expr AND expr
   63     | . expr OR expr
   64     | . NOT expr
   65     | . '-' expr
   66     | . LPAREN expr RPAREN
   67     | . ID LBRACKET expr RBRACKET
   68     | . ID LBRACKET expr RBRACKET LBRACKET expr RBRACKET
   69     | . ID LPAREN expr RPAREN
   70     | . ID LPAREN RPAREN
   71     | . expr IS value_list

    NUM        shift, and go to state 30
    FLOAT_NUM  shift, and go to state 31
    ID         shift, and go to state 32
    LPAREN     shift, and go to state 33
    NOT        shift, and go to state 34
    '-'        shift, and go to state 35

    expr  go to state 83


state 55
